<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_news"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/user_center_padding">

            <TextView
                style="@style/UserCenterText"
                android:text="@string/text_setting_news" />
        </LinearLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:layout_marginLeft="12dp"
            android:background="@color/gray" />

        <LinearLayout
            android:id="@+id/ll_billboard"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/user_center_padding">

            <TextView
                style="@style/UserCenterText"
                android:text="@string/text_setting_billboard" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/user_center_padding">

            <TextView
                style="@style/UserCenterText"
                android:text="@string/text_setting_upgrade" />
        </LinearLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:layout_marginLeft="12dp"
            android:background="@color/gray" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/user_center_padding">

            <TextView
                style="@style/UserCenterText"
                android:text="@string/text_setting_bug_report" />
        </LinearLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:layout_marginLeft="12dp"
            android:background="@color/gray" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/user_center_padding">

            <TextView
                style="@style/UserCenterText"
                android:text="@string/text_setting_about_app" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/user_center_padding">

            <TextView
                style="@style/UserCenterText"
                android:text="@string/text_setting_help_center" />
        </LinearLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:layout_marginLeft="12dp"
            android:background="@color/gray" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/user_center_padding">

            <TextView
                style="@style/UserCenterText"
                android:text="@string/text_user_protocl" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>